Added group name before the table